# liger-engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  annotated.html  annotated_dup.js  build_docs.py  build_docs.sh  build_macos.sh  build_unix.sh  callback_8hpp_source.html  classliger_1_1_console_log_writer-members.html  classliger_1_1_console_log_writer.html  classliger_1_1_console_log_writer__inherit__graph.map  classliger_1_1_event_dispatcher.html  classliger_1_1_event_sink__inherit__graph.map  classliger_1_1_event_sink__inherit__graph.md5  classliger_1_1_platform_layer-members.html  classliger_1_1_platform_layer.html  classliger_1_1_platform_layer.js  classliger_1_1_random.html  classliger_1_1_random.js  classliger_1_1_timer-members.html  classliger_1_1_timer.html  classliger_1_1_window.html  classliger_1_1detail_1_1_callback.html  classliger_1_1detail_1_1_callback_3_01_return_t_07_args_t_8_8_8_08_4-members.html  classliger_1_1detail_1_1_callback_3_01_return_t_07_args_t_8_8_8_08_4.html  classliger_1_1detail_1_1_i_base_event_sink-members.html  classliger_1_1detail_1_1_i_base_event_sink.html  classliger_1_1detail_1_1_i_base_event_sink.js  classliger_1_1detail_1_1_i_base_event_sink__inherit__graph.map  compile_shaders.sh  console__log__writer_8cpp__incl.map  console__log__writer_8cpp_source.html  console__log__writer_8hpp__incl.map  console__log__writer_8hpp__incl.md5  (+139 more)
Editor/: CMakeLists.txt
Editor/Source/: LigerEditor.cpp
Engine/: CMakeLists.txt
Engine/Include/Liger-Engine/Asset/: Id.hpp  Importer.hpp  ImporterLibrary.hpp  Loader.hpp  LoaderLibrary.hpp  LogChannel.hpp  Manager.hpp  Registry.hpp  Storage.hpp
Engine/Include/Liger-Engine/Asset/Importers/: GltfImporter.hpp  StaticMeshImporter.hpp
Engine/Include/Liger-Engine/Asset/Loaders/: MaterialLoader.hpp  ShaderLoader.hpp  (+2 more)
Engine/Include/Liger-Engine/Core/: EnumBitmask.hpp  EnumReflection.hpp  LogChannel.hpp  Time.hpp  UUID.hpp
Engine/Include/Liger-Engine/ECS/: DefaultComponents.hpp  DefaultSystems.hpp  Entity.hpp  LogChannel.hpp  Scene.hpp  Script.hpp  System.hpp  SystemGraph.hpp
Engine/Include/Liger-Engine/RHI/: Buffer.hpp  CommandBuffer.hpp  ComputePipeline.hpp  Context.hpp  DependentTextureInfo.hpp  DescriptorBinding.hpp  Device.hpp  DeviceResourceState.hpp  Extent.hpp  Filter.hpp  Format.hpp  GraphicsPipeline.hpp  Instance.hpp  JobType.hpp  LogChannel.hpp  MappedBuffer.hpp  Pipeline.hpp  PushConstantInfo.hpp  RenderGraph.hpp  ResourceVersionRegistry.hpp  SamplerInfo.hpp  ShaderAlignment.hpp  ShaderModule.hpp  Swapchain.hpp  Texture.hpp
Engine/Include/Liger-Engine/Render/: Feature.hpp  Layer.hpp  LogChannel.hpp  Renderer.hpp  View.hpp
Engine/Include/Liger-Engine/ShaderSystem/: Compiler.hpp  Declaration.hpp  DeclarationParser.hpp  DeclarationStack.hpp  LogChannel.hpp  Shader.hpp  ShaderLoader.hpp
Engine/Source/Asset/: ImporterLibrary.cpp  LoaderLibrary.cpp  Manager.cpp  Registry.cpp
Engine/Source/Asset/Importers/: StaticMeshImporter.cpp
Engine/Source/Asset/Loaders/: MaterialLoader.cpp  ShaderLoader.cpp  StaticMeshLoader.cpp  TextureLoader.cpp
Engine/Source/Core/: Time.cpp
Engine/Source/Core/Containers/: DependencyGraph.cpp
Engine/Source/Core/Log/: ConsoleWriter.cpp  DefaultLog.cxx  Log.cpp  Message.cpp
Engine/Source/Core/Math/: Random.cpp
Engine/Source/Core/Platform/: PlatformLayer.cpp  Window.cpp
Engine/Source/ECS/: DefaultSystems.cpp  Scene.cpp  SystemGraph.cpp
Engine/Source/ECS/BuiltIn/: CameraAspectSystem.cpp  CameraMovementScript.cpp  ScriptSystem.cpp
Engine/Source/RHI/: Instance.cpp  RenderGraph.cpp
Engine/Source/RHI/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanComputePipeline.cpp  VulkanComputePipeline.hpp  VulkanDescriptorManager.cpp  VulkanDescriptorManager.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanQueueSet.cpp  VulkanQueueSet.hpp  VulkanRenderGraph.cpp  VulkanRenderGraph.hpp  VulkanShaderModule.cpp  VulkanShaderModule.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTexture.cpp  VulkanTexture.hpp  VulkanTimelineSemaphore.cpp  VulkanTimelineSemaphore.hpp  VulkanTransferEngine.cpp  VulkanTransferEngine.hpp  VulkanUtils.hpp
Engine/Source/Render/: Layer.cpp  Renderer.cpp
Engine/Source/Render/BuiltIn/: BloomFeature.cpp  CameraDataCollector.cpp  ClusteredLightFeature.cpp  ForwardRenderFeature.cpp  ParticleSystemFeature.cpp  StaticMeshFeature.cpp  TonemapFeature.cpp
Engine/Source/ShaderSystem/: Compiler.cpp  DeclarationParser.cpp  DeclarationStack.cpp  Shader.cpp  ShaderLoader.cpp  ShaderSourceHeader.glsl
Engine/Source/liger/asset/: asset_log_channel.hpp  loader.hpp  manager.hpp  registry.cpp  registry.hpp
Engine/Source/liger/core/: core_log_channel.hpp  type_map.hpp
Engine/Source/liger/rhi/: buffer.hpp  command_buffer.hpp  compute_pipeline.hpp  descriptor_binding.hpp  device.hpp  format.hpp  graphics_pipeline.hpp  instance.cpp  render_graph.cpp  render_graph.hpp  sampler_info.hpp  texture.hpp
ProjectTemplates/Empty/: .gitattributes  CMakeLists.txt  build_unix.sh
ProjectTemplates/Empty/Source/: Main.cpp
editor/: CMakeLists.txt
editor/Source/: LigerEngine.cpp
editor/src/: CMakeLists.txt
engine/: CMakeLists.txt
engine/src/: CMakeLists.txt
engine/src/liger/asset/: asset_registry.cpp  asset_registry.hpp  id.hpp  importer.hpp  loader_library.cpp  loader_library.hpp  manager.cpp  storage.hpp
engine/src/liger/core/: core.cpp  core.hpp  dag.cpp  dag.hpp  enum_bitmask.hpp  enum_bitmask.ipp  enum_class.cpp  enum_class.hpp  enum_reflection.hpp  ref_count_storage.hpp  time.cpp  time.hpp  type_map.hpp  types.hpp  uuid.cpp  uuid.hpp
engine/src/liger/rhi/: dependent_texture_info.hpp  instance.hpp  push_constant_info.hpp  resource_version_registry.hpp  shader_alignment.hpp  swapchain.hpp
sandbox/: CMakeLists.txt
sandbox/src/: CMakeLists.txt  main.cpp  test_dag.cpp  test_rhi.cpp
(+3367 files in other folders)
